package lapr4.jobs4u.interviewmanagement.repositories;

import eapli.framework.domain.repositories.DomainRepository;
import lapr4.jobs4u.interviewmanagement.domain.Interview;

public interface InterviewRepository extends DomainRepository<Long, Interview> {

}
