@startuml

title Class Diagram - US1014

skinparam class {
    skinparam classAttributeIconSize 0
    skinparam packageStyle rectangle
    skinparam shadowing false
    skinparam linetype polyline
    BackgroundColor #FEF9E7
    ArrowColor Black
}

class "RecordInterviewUI" as UI {}

class "RecordInterviewController" as Controller {
    +createInterview(Application,Date,Time):Interview
    +saveInterview(Interview):void
}




class Interview <<(E, #D8BFD8)>>{
    -application:Application
    -time:Time
    -date:Date
    +create(application,time,date):Interview

}
class "Database" as DB <<(D, #8BEBFF)>> {
}

class InterviewRepository <<(R, #FFFF99)>>{
    +save(interview):void
}

class JpaInterviewRepository <<(R, #FFFF99)>>{
    +save(interview):void
}

class ListApplicationService <<(S, #90EE90)>>{
    +listApplications():List<Application>
}

class ListJobOpeningService <<(S, #90EE90)>>{
    +listApplications():List<Application>
}



UI --> Controller

'Controller

Controller --> InterviewRepository
Controller --> Interview
Controller --> ListApplicationService
Controller --> ListJobOpeningService



'Repository
InterviewRepository --> JpaInterviewRepository
JpaInterviewRepository --> DB



@enduml